# music-finder

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: app.py
notebooks/: exploration.ipynb  modeling.ipynb
src/: clustering.py  data_preprocessing.py  feature_engineering.py  music_filter.py
tests/: test_clustering.py  test_data_preprocessing.py  test_feature_engineering.py  test_music_filter.py
