[tool.poetry]
name = "music-finder"
version = "0.1.0"
description = ""
authors = ["Flavian Reignault <flavian.reignault@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
